# cargo-capslock

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  LICENSE  README.md  syscalls.cm
capslock/: Cargo.toml
capslock-cm/: Cargo.toml
capslock-cm/src/: lib.rs
capslock-rust/: Cargo.toml
capslock-rust/src/: lib.rs
capslock-seccomp/: Cargo.toml
capslock-seccomp/src/: error.rs  main.rs  seccomp.rs  syscalls.rs
capslock/src/: caps.rs  lib.rs  report.rs
cm/: Cargo.toml
cm/src/: lib.rs
llvm-ir-analysis/: Cargo.toml
llvm-ir-analysis/src/: call_graph.rs
osv-cache/: Cargo.toml
osv-cache/src/: error.rs  lib.rs  modified.rs
src/: bitcode.rs  caps.rs  cargo.rs  function.rs  graph.rs  lib.rs  location.rs  syscall.rs
src/annotate/: error.rs  matcher.rs  mod.rs
src/bitcode/: function.rs
src/dynamic/: error.rs  fd.rs  location.rs  mod.rs  process.rs  signal.rs
src/dynamic/syscall/: ioctl.rs  mod.rs
src/runtime/: error.rs  fd.rs  mod.rs  process.rs  signal.rs
src/runtime/syscall/: ioctl.rs  mod.rs
src/snapshots/: cargo_capslock__graph__tests__bubble.snap
src/static/: bitcode.rs  mod.rs
src/static/bitcode/: function.rs  inkwell.rs  llvm_ir.rs  mod.rs
src/test/: environment.rs  error.rs  mod.rs  unit.rs
