[workspace]
resolver = "3"
members = ["capslock", "capslock-rust"]
exclude = ["llvm-ir-analysis"]

[workspace.package]
version = "0.1.0"
authors = ["Adam Harvey <adam@adamharvey.name>"]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.91"

[workspace.dependencies]
anyhow = "1.0.100"
capslock = { version = "0.1.0", path = "capslock" }
clap = "4.5.53"
escargot = "0.5.15"
itertools = "0.14.0"
llvm-ir-analysis = { path = "llvm-ir-analysis" }
ouroboros = "0.18.5"
serde = "1.0.228"
serde_json = "1.0.145"
symbolic = { version = "12.17.0", default-features = false }
tempfile = "3.23.0"
thiserror = "2.0.17"
walkdir = "2.5.0"
capslock-rust = { version = "0.1.0", path = "capslock-rust" }
petgraph = "0.8.3"
strum = "0.27.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[package]
name = "cargo-capslock"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
capslock = { workspace = true }
capslock-rust = { workspace = true }
clap = { workspace = true, features = ["derive"] }
escargot = { workspace = true }
itertools = { workspace = true }
llvm-ir-analysis = { workspace = true, features = [
    "llvm-19",
    "strict-versioning",
] }
ouroboros = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
symbolic = { workspace = true, features = ["demangle"] }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "time"] }
walkdir = { workspace = true }
