[package]
name = "capslock-rust"
description = "Rust specific types for cargo-capslock"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
capslock = { workspace = true }
serde = { workspace = true, features = ["derive"] }
