[package]
name = "capslock-seccomp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
capslock = { version = "0.1.0", path = "../capslock" }
clap = { workspace = true, features = ["derive"] }
cm = { version = "0.1.0", path = "../cm" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
