[package]
name = "capslock-seccomp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
capslock = { workspace = true }
clap = { workspace = true, features = ["derive"] }
cm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
