[package]
name = "osv-cache"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
csv = { workspace = true }
itertools.workspace = true
osv = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
xdg = { workspace = true }
zip = { workspace = true }
